Revert "Fix: Fixed scrolling on mobile"

--- a/style/utils/_reset.scss
+++ b/style/utils/_reset.scss
@@ -19,7 +19,6 @@ body {
   max-width: 1440px;
   margin: 0 auto;
   font-family: $roboto;
-  overflow-x: hidden;
 }
 
 a {
